# WebRTC-in-Rust

./: .gitignore  Cargo.toml  README.md
shared-protocol/: Cargo.toml
shared-protocol/src/: lib.rs
signalling-server/: .gitignore  Cargo.toml  Makefile.toml
signalling-server/src/: signalling-server.rs
turn-server/: Cargo.toml
turn-server/src/: main.rs
wasm_client/: .gitignore  Cargo.toml  Makefile.toml  index.html
wasm_client/src/: common.rs  ice.rs  lib.rs  sdp.rs  websockets.rs
