[package]
name = "signalling-server"
version = "0.1.0"
authors = ["CSchleich <schleich.cdaniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="signalling-server"
path="./src/signalling-server.rs"


[dependencies]
async-tungstenite = "0.12.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.62"
simplelog = "0.8.0"
log = "0.4.8"
futures="0.3.12"
async-std="1.9.0"
rand="0.8.3"


# From Workspace
shared-protocol = {path = "../shared-protocol"}
