[package]
name = "turn-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stun = "0.4.2"
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.52"
log = "0.4.14"
base64 = "0.13.0"
rand = "0.8.4"
ring = "0.16.20"
md-5 = "0.10.0"
thiserror = "1.0.30"
# turn = "0.5.4"
turn = {path ="../../turn"}
# webrtc-util = "0.5.3"
util = { package = "webrtc-util", version = "0.5.3", default-features = false, features = ["conn", "vnet"] }
env_logger = "0.9.0"


[dev-dependencies]
tokio-test = "0.4.2"
env_logger = "0.9.0"
chrono = "0.4.19"
hex = "0.4.3"
clap = "2.34.0"
criterion = "0.3.5"
